--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -4,23 +4,23 @@
 
 At the beginning of the previous chapter I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} appears in headless relatives. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy. \pgcitet{pittner1995}{201:fn.4} makes this explicit: ``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.''
 
-What I showed as well in the previous chapter is the case scale \ac{nom} < \ac{acc} < \ac{dat} is a wide-spread phenomenon: it recurs. The scale can be observed in at least two more syntactic phenomena: agreement en relativization.\footnote{
+What I showed as well in the previous chapter is that the case scale \ac{nom} < \ac{acc} < \ac{dat} is a wide-spread phenomenon: the recurs in different phenomena across several languages. The scale can be observed in at least two more syntactic phenomena: agreement and relativization.\footnote{
 In this dissertation I do not work out accounts for these two syntactic phenomena. They merely serve as an illustration that the pattern is reflected in other syntactic phenomena as well.}
 The case scale also appears within morphology in syncretism patterns and morphological case containment. \pgcitet{pittner1995}{201:fn.4} makes this link to morphology as well: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
 
-I am not after a theory in which the case hierarchy is something construction specific, and syntax and morphology both have their own case hierarchy. I argue that there is a single trigger that is responsible for the case scale in different subparts of language \citep[cf.][on numeral constructions]{caha2019}. Specifically, I show that the observed case scale naturally follows on the assumption that the case hierarchy is deeply anchored in syntax. The case scale in morphology and syntax are merely reflexes of how case is organized in language.\footnote{
+I am not after a theory in which the case hierarchy is something construction specific, and syntax and morphology both have their own case hierarchy. I argue that there is a single trigger that is responsible for the case scales in different subparts of language \citep[cf.][on numeral constructions]{caha2019}. Specifically, I show that the observed case scale naturally follows on the assumption that the case hierarchy is deeply anchored in syntax. The case scales in morphology and syntax are merely reflexes of how case is organized in language.\footnote{
 \citet{himmelreich2017} works this intuition out in a different way.
 }
 
-This chapter is structured as follows. First, I introduce a specific case decomposition \citep{caha2009}. In the two following sections, I show how this case decomposition is able to derive the syncretism and morphological case containment facts from the previous chapter. I make this concrete in the framework Nanosyntax \citep{starke2009}. Finally, I show how the case decomposition translates to the case scale observed in headless relatives.
+This chapter is structured as follows. First, I introduce a specific case decomposition \citep{caha2009}. In the two following sections, I show how this case decomposition is able to derive the syncretism and morphological case containment facts from the previous chapter. I make this concrete in the Nanosyntax framework \citep{starke2009}. Finally, I show how the case decomposition translates to the case scale observed in headless relatives.
 
 
 \section{The basic idea}
 
-\citet{caha2009,caha2013} (followed by \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018}) has extensively argued that case should be decomposed into privative features. Specifically, the decomposition is cumulative: each case has a different number of case features, and the number grows monotonically.
+\citet{caha2009,caha2013} (followed by \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018}) has extensively argued that case should be decomposed into privative features. Specifically, the decomposition is cumulative: each case has a different number of case features, and the number grows one by one.
 This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the features that nominative has (here \ac{f}1) plus one extra (here \ac{f}2). Dative has all the features accusative has (\ac{f}1 and \ac{f}2) plus one extra (\ac{f}3).
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
 	\caption {Case decomposed}
 		\begin{tabular}{ll}
@@ -47,14 +47,18 @@ The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive t
 
 \section{Deriving syncretism}\label{sec:syncretism}
 
-Case syncretism follows the ordering of the case scale \ac{nom} < \ac{acc} < \ac{dat}. Along this scale, only contiguous regions in the sequence are syncretic. In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows the possible and impossible syncretism patterns in Table \ref{tbl:syncretisms-derive}.
+Case syncretism follows the ordering of the case scale \ac{nom} < \ac{acc} < \ac{dat}. Along this scale, only contiguous regions in the sequence are syncretic. In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}.
+In Table \ref{tbl:syncretisms-derive} I repeat from Table \ref{tbl:syncretisms} in Section \ref{sec:syncretism} examples that shows the possible and impossible syncretism patterns.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Syncretism patterns (repeated)}
     \input{tables/syncretism-nom-acc-dat.tex}
   \label{tbl:syncretisms-derive}
 \end{table}
+
+
+Table \ref{tbl:syncretisms-derive} shows that if one orders cases in this linear sequence, only contiguous regions in the sequence turn out to be syncretic. First, all three cases can be non-syncretic, as in Faroese. Second, all three cases can be syncretic, as in Dutch. Third, the accusative and the dative can be syncretic and the nominative not, as in Icelandic. Fourth, nominative and accusative can be syncretic and the dative not, as in German. The pattern that is not attested crosslinguistically is the one that targets non-contiguous regions in the table, the ABA pattern \citep{baerman2005,caha2009,zompi2017}.
 
 The syncretism facts follow in a system in which the case is decomposed as in Table \ref{tbl:case-decomposed} and in which lexicalization relies on containment. The latter means that a phonological form is not only inserted when the lexical specification is identical to the syntax, but also when the syntactic features are a subset of the lexical specification.
 
@@ -62,40 +66,21 @@ The intuition is the following. Syncretic forms are realized by a single `lexica
 I return to the terms lexical entry and lexicon shortly.
 } A lexical entry can be applied if it contains all features, as long as there is no more specific one. This system can generate the patterns ABC, AAA, ABB and AAB, but not ABA.
 
-%three reasons for nanosyntax: (1) clear connection between morphology and syntax, (2) morphology precedes syntax, such that morphology can have an influence on syntax, and (3) differences between languages are formulated in terms of different lexical entries. there are universal fseqs and languages differ in in which groupings they spell out these fseqs, that's all. so there's no space for `special language specific' constraints
-
-
 Before I show how the four attest patterns can be derived (and the one unattested not), I need to make some theoretical assumptions explicit about Nanosyntax, the framework in which this dissertation is worked out. First, I show how the Nanosyntactic system is set up in such a way that morphological patterns (like syncretism, but also morphological containment) can inform us about the way syntax is structured. Therefore, I briefly discuss the general architecture of Nanosyntax, its postsyntactic lexicon, and the content and shape of lexical entries. Lastly, I discuss how multiple features (like \ac{f}1, \ac{f}2 and \ac{f}3 from Table \ref{tbl:case-decomposed}) can be spelled out by a single phonological element, i.e. phrasal spellout.
 
-The architecture of Nanosyntax is schematically shown in Figure \ref{fig:nano} \citep[from][]{vandenwyngaerd2020,caha2019}.
 In Nanosyntax, syntax starts with atomic features, and it builds complex syntactic trees. Specifically, there are no `feature bundles' (from a pre-syntactic lexicon) that enter the syntax. The only way complex feature structures come to exist is a a result of merge.
-After syntax (actually, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between syntactic representations on the one hand and phonology (PF) and concepts (CF) on the other hand. So, Nanosyntax is a late insertion model: (lexical) insertion takes place late, namely after syntax.
-
-\begin{figure}[ht]
-  \centering
-  \begin{tikzpicture}[node distance = 1cm, auto]
-    \tikzstyle{block} = [rectangle, draw, text width=5em, text centered, rounded corners, minimum height=2em]
-    \tikzstyle{line} = [draw, -latex']
-      \node [block] (syntax) {Syntax};
-      \node [block, below of=syntax, node distance=1.5cm] (lexicon) {Lexicon};
-      \node [block, below left=0.5cm and -1cm of lexicon] (pf) {PF};
-      \node [block, below right=0.5cm and -1cm of lexicon] (cf) {CF};
-      \path [line] (syntax) -- (lexicon);
-      \path [line] (lexicon) -- (pf);
-      \path [line] (lexicon) -- (cf);
-  \end{tikzpicture}
-  \caption{Nanosyntactic model of grammar}
-  \label{fig:nano}
-\end{figure}
-
-In Nanosyntax, the lexicon contains lexical entries: links between syntactic representations, phonological representations and conceptual representations \citep{starke2014}.\footnote{
-The syntactic representation does not have to correspond to both a phonological and a conceptual representation. Syntactic representation that only correspond to a conceptual representations and not to phonological representations are (phrasal or clausal) idioms. Syntactic representations that only correspond to phonological representations but not to conceptual representations are for instance irregular plurals.
-} I leave the conceptual representation out of discussion for now, as it not relevant for the discussion here. The fact that only syntax can create complex feature structures also has a consequence for lexical entires in the lexicon.\footnote{
+After syntax (actually, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between lexical trees (i.e. syntactic representations) on the one hand and phonology (PF) and concepts (CF) on the other hand.\footnote{
 Throughout the dissertation I call the syntactic representations in the lexicon `lexical trees' in order to distinguish them from syntactic structures in the syntax.
 }
-Syntactic structures are constrained by certain principles, such that only well-formed syntactic structures exist. Since lexical entires in the lexicon link lexical trees to phonological and conceptual representation, these lexical trees are constrained by the same principles as syntactic structures are. As a result, the lexicon only contains well-formed lexical trees. The lexicon does not contain unstructured `feature bundles', because they could never be created by syntax.
 
-Following this logic, the syntactic representation for a lexical entry as in \ref{ex:feature-set} cannot exist. The feature bundle cannot have entered syntax, because syntax starts with atomic features. It can also not be created by syntax, because complex structures can only be created with merge.
+In Nanosyntax, the lexicon contains lexical entries, which are links between lexical trees, phonological representations and conceptual representations \citep{starke2014}.\footnote{
+The lexical tree does not have to correspond to both a phonological and a conceptual representation. Lexical trees that only correspond to a conceptual representations and not to phonological representations are (phrasal or clausal) idioms. Lexical trees that only correspond to phonological representations but not to conceptual representations are for instance irregular plurals.
+} I leave the conceptual representation out of discussion for now, as it is not relevant for the discussion here. The fact that only syntax can create complex feature structures also has a consequence for lexical entires in the lexicon.
+Syntactic structures are constrained by certain principles, such that only well-formed syntactic structures exist. Since lexical entries in the lexicon link lexical trees to phonological and conceptual representation, these lexical trees are constrained by the same principles as syntactic structures are.
+
+As a result, the lexicon only contains well-formed lexical trees. The lexicon does not contain unstructured `feature bundles', because they could never be created by syntax.
+
+Following this logic, a feature bundle as in \ref{ex:feature-set} cannot exist. It cannot have entered syntax, because syntax starts with atomic features. It can also not be created by syntax, because complex structures can only be created with merge.
 
 \ex. [ \ac{f}1, \ac{f}2, \ac{f}3 ]\label{ex:feature-set}
 
@@ -113,9 +98,9 @@ Instead, a possible lexical tree looks as in \ref{ex:feature-structure}. The fea
 
 This structure leads to the concept of phrasal spellout: not terminals but multiple syntactic heads (phrases) are realized with a single piece of phonology (i.e. a single morpheme). A necessary requirement is that these multiple syntactic heads form a constituent.
 
-Let me illustrate all of the above with the Faroese pronouns from Table \ref{tbl:syncretisms-derive}. I simplify the situation in two respects. First, I do not show the internal complexity of the pronouns, including person and number features. Instead, I give a triangle, indicating that this is a complex syntactic structure. I refer to is as the person-number phase it refers to, so e.g. 2\ac{sg}P. Second, in this simplified representation I consider the Faroese pronouns to be monomorphemic. I ignore the fact that all three pronouns clearly have the stem \tit{t} with a suffix following it.
+Let me illustrate all of the above with the Faroese pronouns from Table \ref{tbl:syncretisms-derive}. I simplify the situation in two respects. First, I do not show the internal complexity of the pronouns, including person and number features. Instead, I give a triangle, indicating that this is a complex syntactic structure. I refer to is as the person-number phrase it refers to, so e.g. 2\ac{sg}P. Second, in this simplified representation I consider the Faroese pronouns to be monomorphemic. I ignore the fact that all three pronouns clearly have the stem \tit{t} with a suffix following it.
 
-The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The syntactic representation consists of the complex lexical tree that corresponds to the second person singular pronoun (the 2\ac{sg}P), and \ac{f}1, making it a \ac{nom}P. The phonological representation that is linked to the lexical tree is \tit{tú}.\footnote{
+The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The lexical tree consists of the second person singular pronoun (the 2\ac{sg}P), and \ac{f}1, making it a \ac{nom}P. The phonological representation that is linked to the lexical tree is \tit{tú}.\footnote{
 Throughout the dissertation, I use lexical trees and phonological forms connected by a double arrow (⇔) to refer to a lexical entry.
 }
 
@@ -131,7 +116,7 @@ Throughout the dissertation, I use lexical trees and phonological forms connecte
 \end{forest}
 \label{ex:faroese-tu-lexicon}
 
-The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The syntactic representation contains all the features of the lexical tree in \ref{ex:faroese-tu-lexicon}, plus \ac{f}2, making it an \ac{acc}P. The linked phonological representation is \tit{teg}.
+The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The lexical tree consists of all the features of the lexical tree in \ref{ex:faroese-tu-lexicon}, plus \ac{f}2, making it an \ac{acc}P. The linked phonological representation is \tit{teg}.
 
 \ex.
 \begin{forest} boom
@@ -148,7 +133,7 @@ The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The sy
 \end{forest}
 \label{ex:faroese-teg-lexicon}
 
-The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The syntactic representation contains all the features of the lexical tree in \ref{ex:faroese-teg-lexicon}, plus \ac{f}3, making it an \ac{dat}P. The linked phonological representation is \tit{tær}.
+The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The lexical tree consists of all the features of the lexical tree in \ref{ex:faroese-teg-lexicon}, plus \ac{f}3, making it an \ac{dat}P. The linked phonological representation is \tit{tær}.
 
 \ex.
 \begin{forest} boom
@@ -236,14 +221,14 @@ fit to=tree]{};
 \end{forest}
 \label{ex:faroese-taer-spellout}
 
-In the Faroese examples above, the syntactic structure are all identical to the lexical trees. However, to be a successful match, identity is not a necessary requirement. Instead, matching relies on a containment relation. A lexical entry applies when it contains all features. This is formalized as in \ref{ex:superset-principle}.
+In the Faroese examples above, the syntactic structure are all identical to the lexical trees. However, Nanosyntax assumes that to be a successful match, identity is not a necessary requirement. Instead, matching relies on a containment relation. A lexical entry applies when it contains all features. This is formalized as in \ref{ex:superset-principle}.
 
 \ex. \tbf{The Superset Principle} \citet{starke2009}:\\
 A lexically stored tree matches a syntactic node iff the lexically stored tree contains the syntactic node.
 \label{ex:superset-principle}
 
 Let me illustrate this with the Dutch second person plural pronoun from Table \ref{tbl:syncretisms-derive}. This pronoun is syncretic between between the nominative, accusative and dative.
-The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The syntactic representation consists of the complex lexical tree that corresponds to the second person plural pronoun (the 2\ac{pl}P), and \ac{f}1, \ac{f}2 and \ac{f}3 making it a \ac{dat}P. The phonological representation that is linked to the lexical tree is \tit{jullie}.
+The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The lexical tree consists of the complex lexical tree that corresponds to the second person plural pronoun (the 2\ac{pl}P), and \ac{f}1, \ac{f}2 and \ac{f}3 making it a \ac{dat}P. The phonological representation that is linked to the lexical tree is \tit{jullie}.
 The nominative, the accusative and the dative can all be spelled out with this single lexical entry using the Superset Principle in \ref{ex:superset-principle}.
 
 \ex.
@@ -409,7 +394,7 @@ fit to=tree]{};
  \label{ex:dutch-jullie-spellout-nom}
 
 A question arises at this point. Why are the accusative and nominative in Faroese not spelled out by the lexical entry for the dative (and why is the nominative not spelled out by the lexical entry for the accusative)? These syntactic structures are namely contained in the lexical tree for the dative (and the accusative).
-The reason for that comes from how competition between lexical entries is regulated in Nanosyntax. When two lexical entries compete, the best fit wins. The best fit is the lexical tree with the least unused features. This is formalized as in \ref{ex:elsewhere-condition}.
+The reason for that comes from how competition between lexical entries is regulated in Nanosyntax. When two lexical entries compete, the best fit wins. The best fit is the lexical tree with the least features that are not used. This is formalized as in \ref{ex:elsewhere-condition}.
 
 \ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2020}):\\
 When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
@@ -423,9 +408,9 @@ All the Faroese lexical entries \ref{ex:faroese-tu-lexicon}, \ref{ex:faroese-teg
 Regarding the syntactic structure for the accusative in \ref{ex:faroese-teg-spellout}, the lexical entries \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} are a match.
 \ref{ex:faroese-tu-lexicon} is not a candidate here, because it does not contain the complete syntactic structure (i.e. it lacks \ac{f}2). \ref{ex:faroese-taer-lexicon} has fewer unused features than \ref{ex:faroese-teg-spellout}, so it wins.
 
-Table \ref{tbl:syncretisms-derive} contains two more attested patterns: the ABB in Icelandic and the AAB in German. In the remainder of this section I show how these two patterns are derived, and that the unattested one cannot be derived. I also how the system is unable to derive an ABA, which is crosslinguistically unattested.
+Table \ref{tbl:syncretisms-derive} contains two more attested patterns: the ABB in Icelandic and the AAB in German. In the remainder of this section I show how these two patterns are derived, and that the unattested one cannot be derived. I also show how the system is unable to derive an ABA pattern, which is crosslinguistically unattested \citep{baerman2005,caha2009,zompi2017}.
 
-Consider the Icelanic pattern. For the first person plural, Icelandic uses \tit{við} as nominative and \tit{okkur} as accusative and dative. Two lexical entries are needed for that. The first one in \ref{ex:icelandic-vid-lexicon} contains pronominal features and \ac{f}1, and corresponds to the phonology \tit{við}.
+Consider the Icelandic pattern. For the first person plural, Icelandic uses \tit{við} as nominative and \tit{okkur} as accusative and dative. Two lexical entries are needed for that. The first one in \ref{ex:icelandic-vid-lexicon} contains pronominal features and \ac{f}1, and corresponds to the phonology \tit{við}.
 The second one is given in \ref{ex:icelandic-okkur-lexicon}. It contains in addition to \ref{ex:icelandic-vid-lexicon} also the feature \ac{f}2 and \ac{f}3. The phonological representation that is linked to it is \tit{okkur}.
 
 \ex.
@@ -638,9 +623,9 @@ In sum, the cumulative case decomposition from Table \ref{tbl:case-decomposed} c
 
 \section{Deriving morphological case containment}
 
-Khanty is an example of a language with so-called morphological case containment. The phonological form of the accusative literally contains the phonological form of the nominative, and the form of the dative contains the form of the accusative. In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example from Khanty that shows morphological case containment in Table \ref{tbl:cont-khanty-3sg} \pgcitep{nikolaeva1999}{16}.
+In sum, some languages morphologically reflect the case scale \ac{nom} < \ac{acc} < \ac{dat}. Khanty is an example of such a language. The phonological form of the accusative literally contains the phonological form of the nominative, and the form of the dative contains the form of the accusative. In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example from Khanty that shows morphological case containment in Table \ref{tbl:cont-khanty-3sg} \pgcitep{nikolaeva1999}{16}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Morphological case containment of 3\ac{sg} in Khanty}
     \input{tables/containment-nom-acc-dat.tex}
@@ -649,6 +634,11 @@ Khanty is an example of a language with so-called morphological case containment
 
 The intuition is the following. The morphological form of the pronouns mirrors the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{na}).
 
+Before I show how languages with morphological case containment can be derived, I need to discuss how variation between languages is modeled in Nanosyntax. Crosslinguistic variation is namely explained purely in terms of differences in the lexicon. In other words, the syntactic structure is identical across languages, but the lexical entries package features together differently.
+
+Making this more concrete, the dative contains \ac{f}1, \ac{f}2 and \ac{f}3 in all languages. In the languages discussed in the previous section, Section \ref{sec:syncretism}, \ac{f}3 can only be spelled out in a single lexical entry together with \ac{f}1 and \ac{f}2. The result is that the examples are syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). I show in this section that this is different for languages that show morphological case containment. The \ac{f}2 and the \ac{f}3 are both spelled out by the own respective lexical entries. The result is that the accusative formally contains the nominative, and the dative formally contains the accusative.
+
+Let me illustrate this by deriving the 3\ac{sg} paradigm in Khanty.
 First, I give the lexical entry for the nominative third person singular. It contains pronominal features and the feature \ac{f}1. The phonological form associated with the structure is \tit{luw}. The lexical entry is given in \ref{ex:khanty-luw-lexicon}.
 
 \ex.
@@ -679,11 +669,9 @@ fit to=tree]{};
 ]
 \end{forest}\label{ex:khanty-luw-spellout}
 
-In the previous section I only gave examples in which the forms were syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). All features (pronoiminal and case) were spelled out by a single lexical entry. The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting the \ac{nom}P contained in the \ac{acc}P be realized by the same \ac{nom}P that is spelled out in the nominative. \ac{f}2 has its own realization that builds upon the nominative (and so does \ac{f}3 on top of the accusative).\footnote{
+As shown in \ref{tbl:cont-khanty-3sg}, the morphological form of the accusative contains the morphological form of the nominative plus an extra morpheme: \tit{e:l}. As shown in \ref{tbl:case-decomposed}, the syntactic features of the accusative contain the syntactic features of the nominative plus an extra feature: \ac{f}2. Accordingly, I give the lexical entry for the accusative marker \tit{e:l} in \ref{ex:khanty-el-lexicon}.\footnote{
 Note that it is crucial here to have a theory in which the features that form an accusative contain the features that form a nominative. If not, it would be a surprise that the nominative form is contained in the accusative form. The same holds for the accusative and dative.
 }
-
-Accordingly, I give the lexical entry for the accusative marker \tit{e:l} in \ref{ex:khanty-el-lexicon}.
 
 \ex. \begin{forest} boom
   [\ac{acc}P
@@ -722,13 +710,12 @@ label={below left:\tit{e:l}}]{};
 \end{forest}
 \label{ex:khanty-el-luw-spellout}
 
-The lexical entry in \ref{ex:khanty-el-lexicon} ca only match the syntactic structure if \ac{nom}P moves away, leaving the \ac{acc}P containing \ac{f}2 behind. In other words, the complement of \ac{f}2 needs to be moved away.
+The lexical entry in \ref{ex:khanty-el-lexicon} can only match the syntactic structure if \ac{nom}P moves away, leaving the \ac{acc}P containing \ac{f}2 behind. In other words, the complement of \ac{f}2 needs to be moved away.
 
 Exactly this movement is one of the two so-called `evacuation movements' that is part of the spellout procedure in Nanosyntax. I showed in Section \ref{sec:syncretism} that lexical entries are matched using the Superset Principle and the Elsewhere Condition. If there is no match in the lexicon for a particular syntactic structure, two types of (evacuation) movement can take place, in a fixed order.\footnote{
-The two movement types are \posscitealt{cinque2005} complement and spec-to-spec movement.
-}
+The two types of movement are cyclic movement and snowball movement, also used to derive the possible orders in \tsc{Dem} > \tsc{Num} > \tsc{Adj} > \tsc{N} \citep{cinque2005}.}
 The movement types change the syntactic structure in such a way that they generate new constituents that are possible matches for spellout.\footnote{
-This type of movement is different from syntactic movement. It is driven by spellout, it does not have any interpretational effects, and it does not leave any traces. In Section \ref{ch:relativization} I return to `regular' syntactic movement in Nanosyntax.
+This type of movement is different from syntactic movement. It is driven by spellout, it does not have any interpretational effects, and it does not leave any traces \citep{starke2018}. In Section \ref{ch:relativization} I return to `regular' syntactic movement in Nanosyntax.
 }
 For the discussion in this section, only the second type of movement is relevant: complement movement. In this type of movement, the complement or a particular feature moves to the specifier of that same feature.
 
@@ -781,7 +768,7 @@ The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. The lexi
 \end{forest}
 \label{ex:khanty-luw-el-spellout}
 
-Just as Khanty has an additional morpheme that shows up in the accusative, it also has a morpheme that shows up in the dative. This morpheme \tit{na} combines with the phonological form for the accusative, which leads me to pose the lexical entry in \ref{ex:khanty-na-lexicon}.
+Just as Khanty has an additional morpheme that shows up in the accusative, it also has a morpheme that shows up in the dative. Similarly, just as the accusative has one more feature than the nominative, the dative has one more feature than the accusative. This leads me to pose the lexical entry in \ref{ex:khanty-na-lexicon}.
 
 \ex. \begin{forest} boom
   [\ac{dat}P
@@ -882,7 +869,7 @@ In headless relatives, the internal case and the external case compete to surfac
 
 I repeat the summary of the data pattern for Gothic in Table \ref{tbl:summary-gothic-deriving}. I gave the cells different shadings depending on which cases compete. The dark gray cells are the ones in which dative and the accusative compete, and the dative wins. The light gray cells are the ones in which the dative and the nominative compete, and the dative again wins. The uncolored cells are the ones in which the accusative and the nominative compete, and the accusative wins.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Summary of Gothic headless relative (repeated)}
   \begin{tabular}{c|c|c|c}
