--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -101,7 +101,7 @@ The remaining six cells show instances where the internal and external case diff
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
 }
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Extensive summary of Gothic headless relatives}
     \input{tables/gothic-grammaticality.tex}
@@ -112,7 +112,7 @@ Table \ref{tbl:summary-gothic} can be simplified a step further as Figure \ref{t
 In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-acc-nom}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
 In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-nom-acc}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Summary of Gothic headless relatives}
     \input{tables/gothic-summary.tex}
@@ -146,7 +146,7 @@ It differs per language with how many of its arguments a predicate agrees. Howev
 }
 The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It should be read as follows: if a language allows the predicate to agree with the argument in a particular circle, it also allows the predicate to agree with the argument in the circle around it.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -191,7 +191,7 @@ Basque is an example of a language that shows agreement with the subject, the di
 
 Putting the languages in \posscitet{moravcsik1978} schema gives the result as shown in Figure \ref{fig:agr-sub-do-io-lang}.
 
- \begin{figure}[ht]
+ \begin{figure}[H]
    \centering
    \begin{tikzpicture}
      \draw (0,1) circle (2.25);
@@ -213,7 +213,7 @@ Putting the languages in \posscitet{moravcsik1978} schema gives the result as sh
 
 \citet{gilligan1987} performed a typological study among 100 genetically and areally diverse languages, which confirms the picture. The results are shown in Table \ref{tbl:agr-typo}. There are 23 languages that do not show any agreement, like Japanese. There are 31 languages that show agreement only with the subject and not with the direct and indirect object, like German. There are 25 languages that show agreement with the subject and direct object but not with the indirect object, like Hungarian. There are 23 languages that show agreement with the subject, the direct object and the indirect object, like Basque.
 
- \begin{table}[ht]
+ \begin{table}[H]
    \center
    \caption {Typology for agreement hierarchy}
      \begin{tabular}[t]{ccccc}
@@ -254,7 +254,7 @@ In {the winter} were.\ac{pl} {the king}.\ac{sg}.\ac{dat} given slave.\ac{pl}.\ac
 
 The second type of evidence that \citeauthor{bobaljik2006} gives comes from ergative-absolutive languages. Ergative-absolutive languages differ in their alignment from nominative-accusative languages. In nominative-accusative languages, the subject of an intransitive verb (S) has the same marking as the subject of a transitive verb (A), namely nominative. The object of a transitive verb (O) has its own marking, namely accusative. This is schematically shown in \ref{fig:nom-acc-lang}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \node[] at (0,1) {A};
@@ -269,7 +269,7 @@ The second type of evidence that \citeauthor{bobaljik2006} gives comes from erga
 
 In ergative-absolutive languages, the alignment is different. The subject of an intransitive verb (S) has the same marking as the object of the transitive verb (O), namely absolutive. The subject of the transitive verb (A) has its own marking, namely ergative. This is schematically shown in \ref{fig:erg-abs-lang}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \node[] at (0,1) {A};
@@ -288,7 +288,7 @@ Note here that nominative-accusative languages use the same case marking for the
 
 \citeauthor{bobaljik2006} (following \citealt{marantz2000}) combines nominative-accusative and ergative-absolutive languages in the following way: accusative and ergative are dependent cases, and nominative or absolutive are unmarked case. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-def-dep-dat}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -316,7 +316,7 @@ Last, Basque is a language that shows agreement with the unmarked, the dependent
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -349,7 +349,7 @@ In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It 
 }
 The implicational hierarchy is schematically represented in Figure \ref{fig:rel-sub-do-io}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it. The languages in the figure give examples of the circles they are in.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -468,7 +468,7 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{abs} give has-\ac{rel} woman-\ac{def}\\
  `the woman that the man has given the book to' \flushfill{Basque, \pgcitealt{keenan1977}{72}, my boldfacing}\label{ex:basque-io}
 
- \begin{figure}[ht]
+ \begin{figure}[H]
    \centering
    \begin{tikzpicture}
      \draw (0,1) circle (2.25);
@@ -517,7 +517,7 @@ Ergatives (for instance the ergative subject \tit{ŋad̦a} `I' in \ref{ex:dyirba
 
 In conclusion, just like the agreement hierarchy, the relativization hierarchy is formalized best in terms of morphological case \citep[cf.][]{caha2009}. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -544,7 +544,7 @@ Last, Basque is a language that has a particular relativization strategy for unm
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:rel-nom-acc-dat} suffices.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -585,7 +585,7 @@ I give an example of a syncretism between accusative and dative but not nominati
 I give an example of a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
 Crucially, to the best of my knowledge, there is no language in which the nominative and the dative are syncretic but the accusative is not.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Syncretism patterns}
     \input{tables/syncretism-nom-acc-dat.tex}
@@ -605,7 +605,7 @@ The nominative form for the first person singular is \tit{ma} `I'. The form for 
 
 The third person singular and first person plural show the same pattern. The accusative forms \tit{luwe:l} `him/her' and \tit{muŋe:w} `us' contain the nominative forms \tit{luw} and the \tit{muŋ} plus the accusative marker \tit{-e:l} or \tit{-e:w}. The dative forms \tit{luwe:lna} `him/her' and \tit{muŋe:wna} `us' contain the accusative forms \tit{luwe:l} and \tit{muŋe:w} plus the dative marker \tit{-na}. Again, the dative formally contains the accusative, which in turn contains the nominative.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Morphological case containment in Khanty}
   \begin{tabular}{clll}
